# ASR_Vietnamese_Benchmark

./: .dockerignore  .gitignore  Makefile  README.md  main.aux  main.fdb_latexmk  main.fls  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
configs/: default.yaml
configs/cloud/: base.yaml  matrix.yaml
configs/cloud/datasets/: speech_massive_vie.yaml  viet_youtube_asr_v2.yaml  vivos.yaml  vlsp2020.yaml
configs/cloud/h100/: base_5h.yaml  matrix_300.yaml  matrix_frontier_300_2h.yaml
configs/cloud/models/: chunkformer_ctc_large_vie.yaml  faster_whisper_medium.yaml  pho_whisper_large.yaml  wav2vec2_base_vn_250h.yaml  whisper_large_v3.yaml
configs/datasets/: speech_massive_vie.yaml  vivos.yaml
configs/models/: whisper_small.yaml
docker/: Dockerfile  README.md
docs/: REPO_GUIDE.md  SPLITS_GUIDE.md  Tóm tắt bài nghiên cứu.md  VM_H100_FRONTIER_RUNBOOK.md
latex/: main.tex  references.bib
notebook/: download_dataset.ipynb  plot_results_15_00.ipynb
report/: main.aux  main.fdb_latexmk  main.tex
results/: 14_30.csv  15_00.csv  delta_significance.csv  frontier_merged.csv  frontier_new_raw.csv  robustness_4000_streaming.csv
scripts/: aggregate.py  create_manifest.py  hf_to_manifest.py  paired_bootstrap_delta.py  plot_submission_figures.py  report_manifest.py  run_benchmark.py  run_cloud_matrix.py  subset_manifest.py
src/vnasrbench/: cli.py
src/vnasrbench/data/: hf.py  manifest.py  validate.py
src/vnasrbench/eval/: runner.py  wer.py
src/vnasrbench/models/: base.py  chunkformer.py  (+3 more)
tests/: test_stitch.py  test_textnorm.py  test_wer.py
(+12 files in other folders)
